[package]
name = "securegame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = "0.9"
bevy_rapier2d = { version = "0.19", features = [
    "default",
    "enhanced-determinism",
] }
iyes_loopless = "0.9"
